--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,14 @@
+extras==0.0.3
+fixtures==1.3.1
 imgurpython==1.1.6
+linecache2==1.0.0
 nose==1.3.7
+pbr==1.8.0
 pep8==1.6.2
+python-mimeparse==0.1.4
 requests==2.7.0
+six==1.9.0
+testtools==1.8.0
+traceback2==1.4.0
+unittest2==1.1.0
 yolk3k==0.8.7
